trunk/Archive/8835a09b868ad31bd684cc5f21b99acc-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:1:9: warning: #pragma once in main file [enabled by default]
 #pragma once
         ^
main.cpp:9:4: error: #error "No platform defined"
   #error "No platform defined"
    ^
